--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Hour Tracker</string>
+    <string name="add">Add</string>
+    <string name="remove">Remove</string>
 </resources>
