--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Hour Tracker</string>
     <string name="add">Add</string>
     <string name="remove">Remove</string>
+    <string name="wage">Wage</string>
+    <string name="totHours">Total Hours</string>
+    <string name="totOwed">Total Owed</string>
 </resources>
