--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Hour Tracker</string>
     <string name="add">Add</string>
     <string name="remove">Remove</string>
-    <string name="wage">Wage</string>
+    <string name="wage">Wage:</string>
     <string name="totHours">Total Hours</string>
     <string name="totOwed">Total Owed</string>
 </resources>
