--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_name">Hour Tracker</string>
     <string name="add">Add</string>
     <string name="remove">Remove</string>
-    <string name="wage">Wage:</string>
+    <string name="wage">Wage:\n$%1$s</string>
     <string name="totHours">Total Hours</string>
     <string name="totOwed">Total Owed</string>
 </resources>
