--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="dates">Dates:\n</string>
     <string name="startHours">Start Hours:\n</string>
     <string name="stopHours">Stop Hours:\n</string>
+    <string name="back">Back</string>
+    <string name="clearAll">CLEAR ALL</string>
+    <string name="amountPaid">Amount Paid</string>
 </resources>
