Leftover hour text now has better hint text

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="back">Back</string>
     <string name="clearAll">CLEAR ALL</string>
     <string name="amountPaid">Amount Paid</string>
+    <string name="leftover">Leftover Hours</string>
 </resources>
